--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* General styles */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 body{
@@ -8,11 +7,11 @@ body{
   background-color: #f9f9f9;
 }
 
-/* Navbar */
 header {
   height: 10vh;
 }
 
+/* Navbar */
 .navbar {
   width: 100%;
   display: flex;
@@ -25,6 +24,7 @@ header {
 .logo {
   font-size: 50px;
   color: #ffb74d;
+  margin: 0;
 }
 
 .lista-blanca {
@@ -33,6 +33,7 @@ header {
 
 .menu {
   display: flex;
+  margin-left: auto;
 }
 
 .menu a {
@@ -50,7 +51,7 @@ header {
   background-color: #ffb74d;
 }
 
-/* Hero Section */
+/* Hero */
 .hero {
   display: flex;
   justify-content: space-between;
@@ -131,7 +132,7 @@ header {
   z-index: 0;
 }
 
-/* Other Sections */
+/* Seccion Sobre mi */
 .sobre-mi {
   width: 100%;
   padding: 40px 20px;
@@ -194,7 +195,7 @@ header {
   color: white;
 }
 
-/* Servicios Section */
+/* Seccion de Servicios */
 .seccion-servicios {
   width: 100%;
   text-align: center;
@@ -271,7 +272,7 @@ header {
   background-color: #a0ffb3;
 }
 
-/* Skills Section */
+/* Seccion Skills */
 .skills {
   width: 100%;
   padding: 20px;
@@ -316,7 +317,7 @@ header {
   color: #333;
 }
 
-/* Projects Section */
+/* Seccion Proyectos */
 .proyectos {
   width: 100%;
   padding: 40px 20px;
